# beluga

./: .gitignore  .mailmap  .travis.yml  AUTHORS  Beluga.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  appveyor.yml  asv.conf.json  beluga-dev.yml  bfr_prob_test.py  get-pip.py  libsqlite3.0.dylib  notes.md  notes.txt  pre-commit.sh  pre-push.sh  prob_test.py  prob_test_new.py  prob_test_orbit.py  pyproject.toml  requirements.txt  requirements_dev.txt  run_optim.py  run_tests_lite.sh  setup.py  sol_test.py
beluga/: Beluga.py  BelugaConfig.py  IndirectMethod.py  __init__.py  __main__.py  beluga.old.py  beluga.py  beluga_old.py  continuation.py  core.py  helpers.py  notes.txt  ocp.py  optimlib.py  problem.py  problem.py.old  problem2.py  problem_sep.py  release.py  scaling.py  utils.py
benchmarks/: benchmarks.py
bvpsol/: Algorithm.py  BVP.py  FunctionTemplate.py  Problem.py  Solution.py  __init__.py  bvpinit.py
continuation/: ContinuationSet.py  ContinuationStep.py  ContinuationVariable.py  __init__.py
docs/: readme.md
etc/: Beluga Overview.pptx  RDSL.thmx  RDSL_flat.thmx  new_rdsl_template.pptx
examples/: ConstT_alfadot.py  README.rst  brachisto.py  hypersonic3DOF.py  planarHypersonic.py  planarHypersonic_plot.py  tempfun4.py  z0.py
optim/: BoundaryConditions.py  Hamiltonian.py  NecessaryConditions.py  Problem.py  __init__.py  necessary_conditions.py
problem/: Constraint.py  Execute.py  Expression.py  Problem.py  State.py  Value.py  __init__.py
sandbox/: architecture.md  brachisto.py  brachisto_gen.py  (+6 more)
(+1520 files in other folders)
