[project]
name = "beluga"
version = "0.5.0"
description = "A general purpose indirect trajectory optimization framework."
authors = [{name="Unmaintained", email=""}]
requires-python = ">=3.9"
dependencies = ["cloudpickle <= 3.1.2",
                "docopt <= 0.6.2",
                "llvmlite <= 0.45.1",
                "matplotlib <= 3.10.7",
                "numba <= 0.62.1",
                "numexpr <= 2.14.1",
                "numpy <= 2.3.5",
                "scipy <= 1.16.3",
                "sympy <= 1.14.0",
                "pathos <= 0.3.4",
                "PyYAML <= 6.0.3",
                "tqdm <= 4.67.1"]
license = "MIT"

[project.urls]
Homepage = "https://github.com/Rapid-Design-of-Systems-Laboratory/beluga"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.cmake = false # No CMake
wheel.license-files = ["LICENSE"]

[project.optional-dependencies]
test = ["coverage",
        "cooverage-badge",
        "pylint",
        "pytest>=3.5.1",
        "pytest-cov>=2.5.1",
        "pytest-describe>=0.11.1",
        "sphinx"]



